--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                                 <li><i class="fa-brands fa-github"></i><span></i>GitHub</span><br> Project Track and Collaboration</li>
                                 <li><i id="dsa" class="fa-solid fa-code"></i><span>DSA</span><br> Problem Solving</li>
                                 <li><i id="communication" class="fa-solid fa-comments"></i><span>Communication Skills</span><br> Team Work</li>
-                                <li><i id="youtube" class="fa-brands fa-youtube"></i><span>Video Editor</span><br> Digital Content Creation</li>
+                                <li><i id="youtube" class="fa-brands fa-youtube"></i><span>Video Editing</span><br> Digital Content Creation</li>
                             </ul>
                          </div>
                          <div class="contents" id="Education">
