--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Biswarup Bhunia | PortFolio</title>
-    <link rel="icon" href="Images/Biswarup Logo.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="Images/BiswarupLogo.png" type="image/x-icon" />
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="github.css"/>
     <script src="https://kit.fontawesome.com/2e6c5ea9e6.js" crossorigin="anonymous"></script>
@@ -56,7 +56,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="images/Biswarup Bhunia.png" >
+                    <img src="images/BiswarupBhunia.png" >
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
