My own website all done

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Biswarup Bhunia | PortFolio</title>
-    <link rel="shortcut icon" href="Images/BiswarupLogo.png" type="image/x-icon" />
+    <link rel="icon" href="https://i.ibb.co/XxVMRh2/Biswarup-Logo.png" />
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="github.css"/>
     <script src="https://kit.fontawesome.com/2e6c5ea9e6.js" crossorigin="anonymous"></script>
