--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     </ul>
                 </div>
                 <div class="smallWrapper">
-                    <h3>and I'm a <span style="color: #ff004f;">Software Engineering</span> </h3>
+                    <h3>and I'm a Software Engineering</span> </h3>
                 </div>
                 
                 <a href="images/Biswarup-Bhunia-Resume.pdf" class="btn" download >Resume</a>
