--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li><a href="#portfolio">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
             <i class="fas fa-xmark" onclick="closemenu()"></i>
-            <li><a href="images/Biswarup-Bhunia-Resume.pdf" download>Resume <i class="fa-solid fa-download"></i></a></li>
+            <li><a href="images/Biswarup-Bhunia-Resume.pdf" download>Resume <i class="fa-sharp fa-solid fa-circle-down"></i></a></li>
         </ul>
         <i class="fas fa-bars" onclick="openmenu()"></i>
     </nav>
