--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <!---------------- Navbar ------------------->
-    <nav class="navbar" data-aos="zoom-in">
+    <nav class="navbar">
         <h1 class="logo">Biswarup</h1>
         <ul id="sidemenu">
             <li><a href="#header">Home</a></li>
@@ -32,7 +32,7 @@
         <i class="fas fa-bars" onclick="openmenu()"></i>
     </nav>
     <!--------------------------- Header ------------------------>
-    <div id="header" data-aos="zoom-in">
+    <div id="header">
         <div class="container" id="text-content">
 
 
@@ -147,7 +147,7 @@
             <h1 class="sub-title">My Works</h1>
             <div class="project-list">
                 <div class="work">
-                    <img src="images/geekbuying.png">
+                    <img src="images/geekbuying.png" data-aos="fade-right">
                     <div class="layer">
                         <h1>Geekbuying - Clone</h1>
                         <p>An Ecommerce website. <br> This is a group project. <br> Tech Stack Used - HTML , CSS ,
@@ -160,7 +160,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/clockify.png">
+                    <img src="images/clockify.png" data-aos="fade-right">
                     <div class="layer">
                         <h1>Clockify - Clone</h1>
                         <p>A project tracking website. <br> This is a group project. <br> Tech Stack- HTML , CSS ,
@@ -177,7 +177,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/EverHour.png">
+                    <img src="images/EverHour.png" data-aos="fade-right">
                     <div class="layer">
                         <h1>Everhour - Clone</h1>
                         <p>A Free time tracking software with hassle-free integrations. <br> This is a group project.
@@ -194,7 +194,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/adminpanal.png">
+                    <img src="images/adminpanal.png" data-aos="fade-right">
                     <div class="layer">
                         <h1>Product Management System</h1>
                         <p>It's a Ecommerce product management system where admin can track backend. <br> I am
@@ -238,7 +238,7 @@
                 </div>
             </div>
         </div>
-        <div class="copyright" data-aos="fade-in">
+        <div class="copyright">
             <p>Written & Coded By Biswarup Bhunia <i class="fa-solid fa-heart"></i></p>
         </div>
     </div>
