--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <li><a href="#portfolio">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
             <i class="fas fa-xmark" onclick="closemenu()"></i>
-            <li><a href="images/Biswarup-Bhunia-Resume.pdf" download>Resume <i
+            <li><a href="https://drive.google.com/file/d/1Xbm24skQlt8_dtP9W0Xs9yhSB9bvgXOe/view?usp=share_link" target="_blank" download>Resume <i
                         class="fa-sharp fa-solid fa-circle-down"></i></a></li>
         </ul>
         <i class="fas fa-bars" onclick="openmenu()"></i>
@@ -50,7 +50,7 @@
                     <h3>and I'm a Software Engineering</span> </h3>
                 </div>
 
-                <a href="images/Biswarup-Bhunia-Resume.pdf" class="btn" download>Resume</a>
+                <a href="https://drive.google.com/file/d/1Xbm24skQlt8_dtP9W0Xs9yhSB9bvgXOe/view?usp=share_link" target="_blank" class="btn" download>Resume</a>
             </div>
 
         </div>
