--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
                         application for better stability and speed. Love to work in a team.</p>
 
                     <div class="details">
-                        <p class="skill-ed active" onclick="opentab('Technical')">Technical Skills</p>
-                        <p class="skill-ed" onclick="opentab('Skills')">Soft Skills</p>
+                        <p class="skill-ed active" onclick="opentab('Technical')">Skills</p>
                         <p class="skill-ed" onclick="opentab('Education')">Education</p>
                     </div>
                     <div class="contents active-tab" id="Technical">
@@ -86,8 +85,6 @@
                             <li><i id="html" class="fa-brands fa-html5"></i><span>Html & Css</span><br>Frontend Web/App
                                 Devlopment</li>
                         </ul>
-                    </div>
-                    <div class="contents" id="Skills">
                         <ul>
                             <li><i class="fa-brands fa-github"></i><span></i>GitHub</span><br> Project Track and
                                 Collaboration</li>
@@ -147,7 +144,7 @@
             <h1 class="sub-title">My Works</h1>
             <div class="project-list">
                 <div class="work">
-                    <img src="images/geekbuying.png" data-aos="fade-right">
+                    <img src="images/geekbuying.png" data-aos="zoom-in">
                     <div class="layer">
                         <h1>Geekbuying - Clone</h1>
                         <p>An Ecommerce website. <br> This is a group project. <br> Tech Stack Used - HTML , CSS ,
@@ -160,7 +157,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/clockify.png" data-aos="fade-right">
+                    <img src="images/clockify.png" data-aos="zoom-in">
                     <div class="layer">
                         <h1>Clockify - Clone</h1>
                         <p>A project tracking website. <br> This is a group project. <br> Tech Stack- HTML , CSS ,
@@ -177,7 +174,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/EverHour.png" data-aos="fade-right">
+                    <img src="images/EverHour.png" data-aos="zoom-in">
                     <div class="layer">
                         <h1>Everhour - Clone</h1>
                         <p>A Free time tracking software with hassle-free integrations. <br> This is a group project.
@@ -194,7 +191,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/adminpanal.png" data-aos="fade-right">
+                    <img src="images/adminpanal.png" data-aos="zoom-in">
                     <div class="layer">
                         <h1>Product Management System</h1>
                         <p>It's a Ecommerce product management system where admin can track backend. <br> I am
