--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <ul id="sidemenu">
             <li><a href="#header">Home</a></li>
             <li><a href="#about">About</a></li>
+            <li><a href="#Technical">Skills</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#github">Github</a></li>
             <li><a href="#portfolio">Projects</a></li>
