--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
             <li><a href="#github">Github</a></li>
             <li><a href="#portfolio">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
+            <li><a href="https://drive.google.com/file/d/1Xbm24skQlt8_dtP9W0Xs9yhSB9bvgXOe/view?usp=share_link"
+                    target="_blank">Resume <i class="fa-sharp fa-solid fa-circle-down"></i></a></li>
             <i class="fas fa-xmark" onclick="closemenu()"></i>
-            <li><a href="https://drive.google.com/file/d/1Xbm24skQlt8_dtP9W0Xs9yhSB9bvgXOe/view?usp=share_link" target="_blank" download>Resume <i
-                        class="fa-sharp fa-solid fa-circle-down"></i></a></li>
+
         </ul>
         <i class="fas fa-bars" onclick="openmenu()"></i>
     </nav>
@@ -51,7 +52,8 @@
                     <h3>and I'm a Software Engineering</span> </h3>
                 </div>
 
-                <a href="https://drive.google.com/file/d/1Xbm24skQlt8_dtP9W0Xs9yhSB9bvgXOe/view?usp=share_link" target="_blank" class="btn" download>Resume</a>
+                <a href="https://drive.google.com/file/d/1Xbm24skQlt8_dtP9W0Xs9yhSB9bvgXOe/view?usp=share_link"
+                    target="_blank" class="btn" download>Resume</a>
             </div>
 
         </div>
@@ -62,7 +64,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="images/BiswarupBhunia.png">
+                    <img src="images/BiswarupBhunia.jpeg">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
@@ -79,7 +81,9 @@
                         <ul>
                             <li><i id="java" class="fa-brands fa-java"></i><span>Java</span><br>Backend Web/App
                                 Devlopment</li>
-                            <li><i id="sql" class="fa-solid fa-database"></i><span>MySQL</span> <br>Database Management
+                            <li><img src="images/spring.2048x2045.png" id="spring"></i><span>Spring Boot</span><br>For
+                                Create REST API.</li>
+                            <li><i id="sql" class="fa-solid fa-database"></i><span>SQL</span> <br>Database Management
                             </li>
                             <li><i id="js" class="fa-brands fa-js"></i><span>JavaScript</span><br>Interactive Web/App
                                 Devlopment</li>
@@ -90,6 +94,8 @@
                             <li><i class="fa-brands fa-github"></i><span></i>GitHub</span><br> Project Track and
                                 Collaboration</li>
                             <li><i id="dsa" class="fa-solid fa-code"></i><span>DSA</span><br> Problem Solving</li>
+                            <li><img id="hibernate" src="images/hibernate.1965x2048.png"
+                                alt=""></i><span>Hibernate</span><br>ORM For Connect DATABASE</li>
                             <li><i id="communication" class="fa-solid fa-comments"></i><span>Communication
                                     Skills</span><br> Team Work</li>
                             <li><i id="youtube" class="fa-brands fa-youtube"></i><span>Video Editing</span><br> Digital
@@ -111,7 +117,7 @@
         </div>
     </div>
     <!----------------- Services ----------------------->
-    <div id="services" >
+    <div id="services">
         <div class="container" data-aos="fade-in">
             <h1 class="sub-title">My Services</h1>
             <div class="services-list">
@@ -254,6 +260,6 @@
 <script>
     AOS.init({
         offset: 110,
-  duration: 1000,
+        duration: 1000,
     });
 </script>
