--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="github.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
     <script src="https://kit.fontawesome.com/2e6c5ea9e6.js" crossorigin="anonymous"></script>
 
 </head>
@@ -74,32 +75,39 @@
                         application for better stability and speed. Love to work in a team.</p>
 
                     <div class="details">
-                        <p class="skill-ed active" onclick="opentab('Technical')">Skills</p>
+                        <p class="skill-ed active" onclick="opentab('Technical')">Skills & Tools</p>
                         <p class="skill-ed" onclick="opentab('Education')">Education</p>
                     </div>
                     <div class="contents active-tab" id="Technical">
                         <ul>
                             <li><i id="java" class="fa-brands fa-java"></i><span>Java</span><br>Backend Web/App
                                 Devlopment</li>
-                            <li><img src="images/spring.2048x2045.png" id="spring"></i><span>Spring Boot</span><br>For
+                            <li><img src="images/spring.2048x2045.png" id="spring"><span>Spring Boot</span><br>For
                                 Create REST API.</li>
                             <li><i id="sql" class="fa-solid fa-database"></i><span>SQL</span> <br>Database Management
                             </li>
                             <li><i id="js" class="fa-brands fa-js"></i><span>JavaScript</span><br>Interactive Web/App
                                 Devlopment</li>
-                            <li><i id="html" class="fa-brands fa-html5"></i><span>Html & Css</span><br>Frontend Web/App
+                            <li><i id="html" class="fa-brands fa-html5"></i><span>Html & Css</span><br>Frontend Web
                                 Devlopment</li>
                         </ul>
                         <ul>
-                            <li><i class="fa-brands fa-github"></i><span></i>GitHub</span><br> Project Track and
+                            <li><i class="fa-brands fa-github"></i><span>GitHub</span><br> Project Track and
                                 Collaboration</li>
                             <li><i id="dsa" class="fa-solid fa-code"></i><span>DSA</span><br> Problem Solving</li>
-                            <li><img id="hibernate" src="images/hibernate.1965x2048.png"
-                                alt=""></i><span>Hibernate</span><br>ORM For Connect DATABASE</li>
-                            <li><i id="communication" class="fa-solid fa-comments"></i><span>Communication
-                                    Skills</span><br> Team Work</li>
+                            <li><img id="hibernate" src="images/hibernate.1965x2048.png"><span>Hibernate</span><br>ORM For Connect DATABASE</li>
                             <li><i id="youtube" class="fa-brands fa-youtube"></i><span>Video Editing</span><br> Digital
                                 Content Creation</li>
+                        </ul>
+                        <ul>
+                            <li><img id="eclipse" src="images/eclipse.png"><span>Eclipse</span><br> For Backend
+                                Devlopment In JAVA.</li>
+                            <li><img id="SpringTool" src="images/spring tool.jpg"><span>Spring Tools</span><br> For Developing In
+                                Spring Boot Web Services.</li>
+                            <li><img id="vscode" src="images/Vs Code.png"><span>VS
+                                    Code</span><br>For Frontend Devlopment In HTML,CSS and JS.</li>
+                            <li><img id="aws" src="images/aws.png"><span>AWS</span><br> For Deploy
+                                DATABASE To Cloud.</li>
                         </ul>
                     </div>
                     <div class="contents" id="Education">
@@ -151,15 +159,18 @@
             <h1 class="sub-title">My Works</h1>
             <div class="project-list">
                 <div class="work">
-                    <img src="images/geekbuying.png" data-aos="zoom-in">
+                    <img src="images/FastTrackBusServiceErDiagram12.png" data-aos="zoom-in">
                     <div class="layer">
-                        <h1>Geekbuying - Clone</h1>
-                        <p>An Ecommerce website. <br> This is a group project. <br> Tech Stack Used - HTML , CSS ,
-                            Vanilla JS.<br> In this project, I lead the team. <br> I created the brand page, product
-                            page, clearance page,Address Page. <br> </p>
+                        <h1>Fastrack Bus Service</h1>
+                        <p>This is a Web Service Project which provide REST API for Bus Management Service. <br> This is
+                            a group project. <br> Tech Stack Used - Spring Boot , Java ,
+                            My SQL, JSP, Hibernate, Swagger-UI.<br> In this project, I work as a team. <br> I created
+                            the Admin Module, User Module with poper validation and authentication. <br> The
+                            functionality we are adding in the project
+                            are: Sign Up & Log In by User and Admin, Add Bus and Route, Reserve Or Book Seat, Give
+                            Feedback. </p>
                         <div>
-                            <a href="https://github.com/biswarup-bhunia/geeksbuying.com" target="_blank">Source Code</a>
-                            <a href="https://brilliant-cassata-ee551e.netlify.app/" target="_blank">Website</a>
+                            <a href="https://github.com/ritesh19331/berserk-cloth-744" target="_blank">Source Code</a>
                         </div>
                     </div>
                 </div>
